[project.urls]
"Homepage" = "https://github.com/neonrust/epm"
"Bug Tracker" = "https://github.com/neonrust/epm/issues"

[tool.poetry]
name = "episode-manager"
version = "0.14-1"
description = "Keep track of your episode viewing and schedule."
readme = "README.md"
authors = [
  "André Jonsson <episode-manager@0x1.se>"
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
epm = "episode_manager.epm:main"
test = 'test:run'
