[project.urls]
"Homepage" = "https://github.com/neonrust/epm"
"Bug Tracker" = "https://github.com/neonrust/epm/issues"

[project]
name = "episode-manager"
version = "0.24-1"
description = "Keep track of your episode viewing and schedule."
authors = [
  { name = "André Jonsson", email = "episode-manager@0x1.se>" },
]
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities"
]
requires-python = "^3.9"
dependencies = [
	"requests>=2.32.4",
	"urllib3==2.5.0",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
epm = "episode_manager.epm:main"
test = 'test:run'
